Fix issue where manipulation canvas had a wrong size

--- a/Resources/Private/Less/modules/documentview.less
+++ b/Resources/Private/Less/modules/documentview.less
@@ -19,7 +19,7 @@
     .fullscreen & {
         width: 100% !important;
     }
-    #tx-dlf-map {
+    #tx-dlf-map, #tx-dfgviewer-map-manipulate {
         position: absolute;
         top: 0;
         right: 0;
